--- a/http2/Makefile
+++ b/http2/Makefile
@@ -1,4 +1,5 @@
 all:
+	gprbuild -g -p -XPRJ_TARGET=UNIX -XTARGET=x86_64-linux-gnu ../aws.gpr
 	gprbuild -g -p -XPRJ_TARGET=UNIX -XTARGET=x86_64-linux-gnu prj.gpr
 
 clean:
